--- a/package.json
+++ b/package.json
@@ -7,16 +7,28 @@
     "dev": "nuxt dev",
     "build": "nuxt build",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "tsx prisma/seed.ts",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@nuxt/ui": "^2.18.4",
+    "@prisma/adapter-libsql": "^7.1.0",
+    "@prisma/client": "^7.1.0",
+    "bcrypt": "^6.0.0",
     "nuxt": "^3.14.159",
+    "prisma": "^7.1.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.3.0",
-    "@nuxtjs/tailwindcss": "^6.12.0"
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/bcrypt": "^6.0.0",
+    "tsx": "^4.21.0"
   }
 }
